# uisurf-admin

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml  run.local.sh
scripts/: users-managment.py
src/uisurf_admin/: __init__.py  api.py  config.py  main.py  security.py
src/uisurf_admin/models/: __init__.py  models.py
src/uisurf_admin/routers/: __init__.py  sessions.py  users.py
src/uisurf_admin/services/: session_manager.py
