[project]
name = "uisurf-admin"
version = "0.1.0"
description = "Session management API for UISurf"
readme = "README.md"
authors = [
    { name = "haruiz", email = "henryruiz22@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "fastapi-utils>=0.8.0",
    "fastapi[standard]>=0.135.1",
    "firebase-admin>=7.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.41.0",
]

[project.scripts]
uisurf-admin = "uisurf_admin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "litellm>=1.82.2",
]
